<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vivid.courseval.MainActivity">
    <ImageView android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:alpha="0.2" />

    <RelativeLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/infor_title"
                    android:layout_gravity="center"
                    android:textSize="25sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btnbackgrey"
                    android:layout_gravity="left"
                    android:id="@+id/btnBack"/>

            </FrameLayout>

            <LinearLayout android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info1"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info3"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info4"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info5"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:layout_margin="5dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="bottom"
                    android:layout_alignParentBottom="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="2"
                        android:background="@color/white">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/btnshutdown"
                            android:id="@+id/btnExit"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="2"
                        android:background="@color/white">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/about_blue"
                            android:id="@+id/btnAbout"/>

                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </RelativeLayout>



</FrameLayout>
