<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vivid.courseval.MainActivity">
    <ImageView android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:alpha="0.2" />

    <RelativeLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/course_val"
                    android:layout_gravity="center"
                    android:textSize="25sp"/>

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icon_refresh"
                    android:textSize="30sp"
                    android:id="@+id/btnRefresh"
                    android:layout_gravity="right"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ic_usd"
                        android:text="@string/icon_usd"
                        android:textColor="@color/orange"
                        android:textSize="25sp"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_curr"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sell_curr"/>

                </LinearLayout>
                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interbank"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvUSDBuy"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvUSDSell"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nbu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvUSDBuyNBU"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvUSDSellNBU"/>
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ic_euro"
                        android:text="@string/icon_euro"
                        android:textColor="@color/blue"
                        android:textSize="25sp"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_curr"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sell_curr"/>

                </LinearLayout>
                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interbank"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvEURBuy"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvEURSell"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nbu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvEURBuyNBU"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvEURSellNBU"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <LinearLayout android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ic_rub"
                        android:text="@string/icon_rub"
                        android:textColor="@color/green"
                        android:textSize="25sp"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy_curr"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sell_curr"/>

                </LinearLayout>
                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/interbank"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvRUBBuy"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvRUBSell"/>
                </LinearLayout>

                <LinearLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="5"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nbu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvRUBBuyNBU"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvRUBSellNBU"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@color/white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/exit"
                    android:text="@string/icon_power_off"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="2"
                android:background="@color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnInfo"
                    android:text="@string/icon_info_circle"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    />

            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>



</FrameLayout>
